--- a/.prettierrc
+++ b/.prettierrc
@@ -1,14 +1,12 @@
 {
-    "printWidth": 160,
-    "singleQuote": true,
-    "trailingComma": "none",
-    "tabWidth": 4,
-    "overrides": [
-        {
-            "files": ["*.md", "*.mdx", "*.yaml"],
-            "options": {
-                "tabWidth": 2
-            }
-        }
-    ]
+  "printWidth": 120,
+  "tabWidth": 2,
+  "useTabs": false,
+  "semi": false,
+  "singleQuote": false,
+  "trailingComma": "es5",
+  "bracketSpacing": true,
+  "jsxBracketSameLine": false,
+  "arrowParens": "always",
+  "proseWrap": "always"
 }
