--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@types/react-dom": "^18.2.25",
     "astro": "^4.6.2",
     "blobshape": "^1.0.0",
+    "global": "^4.4.0",
     "marked": "^13.0.0",
     "marked-shiki": "^1.1.0",
+    "prettier": "^3.3.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwindcss": "^3.4.3",
@@ -30,6 +32,8 @@
   "devDependencies": {
     "@types/blobshape": "^1.0.3",
     "@types/node": "^20.12.7",
-    "daisyui": "^4.10.2"
+    "daisyui": "^4.10.2",
+    "prettier-plugin-astro": "^0.14.1",
+    "prettier-plugin-tailwindcss": "^0.6.8"
   }
 }
